packages/integration/__tests__/__snapshots__/crafty-preset-babel-webpack.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles Generators 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles-generators/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                status
  1 kB  3        ./js/script.js        built
  1 kB  4        multi ./js/script.js  built

  size  name     asset                 status
  1 kB  default  myBundle.min.js       emitted
  1 kB  default  myBundle.min.js.map   emitted

  (3 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles Generators 2`] = `
"!function(t,e){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=e();else if(\\"function\\"==typeof define&&define.amd)define([],e);else{var r=e();for(var n in r)(\\"object\\"==typeof exports?exports:t)[n]=r[n]}}(window,function(){return function(t){var e={};function r(n){if(e[n])return e[n].exports;var o=e[n]={i:n,l:!1,exports:{}};return t[n].call(o.exports,o,o.exports,r),o.l=!0,o.exports}return r.m=t,r.c=e,r.d=function(t,e,n){r.o(t,e)||Object.defineProperty(t,e,{configurable:!1,enumerable:!0,get:n})},r.r=function(t){Object.defineProperty(t,\\"__esModule\\",{value:!0})},r.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return r.d(e,\\"a\\",e),e},r.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},r.p=\\"\\",r(r.s=4)}([function(t,e,r){t.exports=r(2)},function(t,e){!function(e){\\"use strict\\";var r,n=Object.prototype,o=n.hasOwnProperty,i=\\"function\\"==typeof Symbol?Symbol:{},a=i.iterator||\\"@@iterator\\",c=i.asyncIterator||\\"@@asyncIterator\\",u=i.toStringTag||\\"@@toStringTag\\",f=\\"object\\"==typeof t,s=e.regeneratorRuntime;if(s)f&&(t.exports=s);else{(s=e.regeneratorRuntime=f?t.exports:{}).wrap=x;var h=\\"suspendedStart\\",l=\\"suspendedYield\\",p=\\"executing\\",y=\\"completed\\",d={},v={};v[a]=function(){return this};var g=Object.getPrototypeOf,m=g&&g(g(G([])));m&&m!==n&&o.call(m,a)&&(v=m);var w=_.prototype=b.prototype=Object.create(v);E.prototype=w.constructor=_,_.constructor=E,_[u]=E.displayName=\\"GeneratorFunction\\",s.isGeneratorFunction=function(t){var e=\\"function\\"==typeof t&&t.constructor;return!!e&&(e===E||\\"GeneratorFunction\\"===(e.displayName||e.name))},s.mark=function(t){return Object.setPrototypeOf?Object.setPrototypeOf(t,_):(t.__proto__=_,u in t||(t[u]=\\"GeneratorFunction\\")),t.prototype=Object.create(w),t},s.awrap=function(t){return{__await:t}},j(O.prototype),O.prototype[c]=function(){return this},s.AsyncIterator=O,s.async=function(t,e,r,n){var o=new O(x(t,e,r,n));return s.isGeneratorFunction(e)?o:o.next().then(function(t){return t.done?t.value:o.next()})},j(w),w[u]=\\"Generator\\",w[a]=function(){return this},w.toString=function(){return\\"[object Generator]\\"},s.keys=function(t){var e=[];for(var r in t)e.push(r);return e.reverse(),function r(){for(;e.length;){var n=e.pop();if(n in t)return r.value=n,r.done=!1,r}return r.done=!0,r}},s.values=G,R.prototype={constructor:R,reset:function(t){if(this.prev=0,this.next=0,this.sent=this._sent=r,this.done=!1,this.delegate=null,this.method=\\"next\\",this.arg=r,this.tryEntries.forEach(N),!t)for(var e in this)\\"t\\"===e.charAt(0)&&o.call(this,e)&&!isNaN(+e.slice(1))&&(this[e]=r)},stop:function(){this.done=!0;var t=this.tryEntries[0].completion;if(\\"throw\\"===t.type)throw t.arg;return this.rval},dispatchException:function(t){if(this.done)throw t;var e=this;function n(n,o){return c.type=\\"throw\\",c.arg=t,e.next=n,o&&(e.method=\\"next\\",e.arg=r),!!o}for(var i=this.tryEntries.length-1;i>=0;--i){var a=this.tryEntries[i],c=a.completion;if(\\"root\\"===a.tryLoc)return n(\\"end\\");if(a.tryLoc<=this.prev){var u=o.call(a,\\"catchLoc\\"),f=o.call(a,\\"finallyLoc\\");if(u&&f){if(this.prev<a.catchLoc)return n(a.catchLoc,!0);if(this.prev<a.finallyLoc)return n(a.finallyLoc)}else if(u){if(this.prev<a.catchLoc)return n(a.catchLoc,!0)}else{if(!f)throw new Error(\\"try statement without catch or finally\\");if(this.prev<a.finallyLoc)return n(a.finallyLoc)}}}},abrupt:function(t,e){for(var r=this.tryEntries.length-1;r>=0;--r){var n=this.tryEntries[r];if(n.tryLoc<=this.prev&&o.call(n,\\"finallyLoc\\")&&this.prev<n.finallyLoc){var i=n;break}}i&&(\\"break\\"===t||\\"continue\\"===t)&&i.tryLoc<=e&&e<=i.finallyLoc&&(i=null);var a=i?i.completion:{};return a.type=t,a.arg=e,i?(this.method=\\"next\\",this.next=i.finallyLoc,d):this.complete(a)},complete:function(t,e){if(\\"throw\\"===t.type)throw t.arg;return\\"break\\"===t.type||\\"continue\\"===t.type?this.next=t.arg:\\"return\\"===t.type?(this.rval=this.arg=t.arg,this.method=\\"return\\",this.next=\\"end\\"):\\"normal\\"===t.type&&e&&(this.next=e),d},finish:function(t){for(var e=this.tryEntries.length-1;e>=0;--e){var r=this.tryEntries[e];if(r.finallyLoc===t)return this.complete(r.completion,r.afterLoc),N(r),d}},catch:function(t){for(var e=this.tryEntries.length-1;e>=0;--e){var r=this.tryEntries[e];if(r.tryLoc===t){var n=r.completion;if(\\"throw\\"===n.type){var o=n.arg;N(r)}return o}}throw new Error(\\"illegal catch attempt\\")},delegateYield:function(t,e,n){return this.delegate={iterator:G(t),resultName:e,nextLoc:n},\\"next\\"===this.method&&(this.arg=r),d}}}function x(t,e,r,n){var o=e&&e.prototype instanceof b?e:b,i=Object.create(o.prototype),a=new R(n||[]);return i._invoke=function(t,e,r){var n=h;return function(o,i){if(n===p)throw new Error(\\"Generator is already running\\");if(n===y){if(\\"throw\\"===o)throw i;return F()}for(r.method=o,r.arg=i;;){var a=r.delegate;if(a){var c=P(a,r);if(c){if(c===d)continue;return c}}if(\\"next\\"===r.method)r.sent=r._sent=r.arg;else if(\\"throw\\"===r.method){if(n===h)throw n=y,r.arg;r.dispatchException(r.arg)}else\\"return\\"===r.method&&r.abrupt(\\"return\\",r.arg);n=p;var u=L(t,e,r);if(\\"normal\\"===u.type){if(n=r.done?y:l,u.arg===d)continue;return{value:u.arg,done:r.done}}\\"throw\\"===u.type&&(n=y,r.method=\\"throw\\",r.arg=u.arg)}}}(t,r,a),i}function L(t,e,r){try{return{type:\\"normal\\",arg:t.call(e,r)}}catch(t){return{type:\\"throw\\",arg:t}}}function b(){}function E(){}function _(){}function j(t){[\\"next\\",\\"throw\\",\\"return\\"].forEach(function(e){t[e]=function(t){return this._invoke(e,t)}})}function O(t){var e;this._invoke=function(r,n){function i(){return new Promise(function(e,i){!function e(r,n,i,a){var c=L(t[r],t,n);if(\\"throw\\"!==c.type){var u=c.arg,f=u.value;return f&&\\"object\\"==typeof f&&o.call(f,\\"__await\\")?Promise.resolve(f.__await).then(function(t){e(\\"next\\",t,i,a)},function(t){e(\\"throw\\",t,i,a)}):Promise.resolve(f).then(function(t){u.value=t,i(u)},a)}a(c.arg)}(r,n,e,i)})}return e=e?e.then(i,i):i()}}function P(t,e){var n=t.iterator[e.method];if(n===r){if(e.delegate=null,\\"throw\\"===e.method){if(t.iterator.return&&(e.method=\\"return\\",e.arg=r,P(t,e),\\"throw\\"===e.method))return d;e.method=\\"throw\\",e.arg=new TypeError(\\"The iterator does not provide a 'throw' method\\")}return d}var o=L(n,t.iterator,e.arg);if(\\"throw\\"===o.type)return e.method=\\"throw\\",e.arg=o.arg,e.delegate=null,d;var i=o.arg;return i?i.done?(e[t.resultName]=i.value,e.next=t.nextLoc,\\"return\\"!==e.method&&(e.method=\\"next\\",e.arg=r),e.delegate=null,d):i:(e.method=\\"throw\\",e.arg=new TypeError(\\"iterator result is not an object\\"),e.delegate=null,d)}function k(t){var e={tryLoc:t[0]};1 in t&&(e.catchLoc=t[1]),2 in t&&(e.finallyLoc=t[2],e.afterLoc=t[3]),this.tryEntries.push(e)}function N(t){var e=t.completion||{};e.type=\\"normal\\",delete e.arg,t.completion=e}function R(t){this.tryEntries=[{tryLoc:\\"root\\"}],t.forEach(k,this),this.reset(!0)}function G(t){if(t){var e=t[a];if(e)return e.call(t);if(\\"function\\"==typeof t.next)return t;if(!isNaN(t.length)){var n=-1,i=function e(){for(;++n<t.length;)if(o.call(t,n))return e.value=t[n],e.done=!1,e;return e.value=r,e.done=!0,e};return i.next=i}}return{next:F}}function F(){return{value:r,done:!0}}}(function(){return this}()||Function(\\"return this\\")())},function(t,e,r){var n=function(){return this}()||Function(\\"return this\\")(),o=n.regeneratorRuntime&&Object.getOwnPropertyNames(n).indexOf(\\"regeneratorRuntime\\")>=0,i=o&&n.regeneratorRuntime;if(n.regeneratorRuntime=void 0,t.exports=r(1),o)n.regeneratorRuntime=i;else try{delete n.regeneratorRuntime}catch(t){n.regeneratorRuntime=void 0}},function(t,e,r){\\"use strict\\";r.r(e),r.d(e,\\"default\\",function(){return a});var n=r(0),o=r.n(n),i=o.a.mark(a);function a(){return o.a.wrap(function(t){for(;;)switch(t.prev=t.next){case 0:return t.next=2,1;case 2:case\\"end\\":return t.stop()}},i,this)}},function(t,e,r){t.exports=r(3)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles JavaScript 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                      status
  1 kB  0        ./js/script.js + 9 modules  built
  1 kB  1        multi ./js/script.js        built

  size  name     asset                       status
  1 kB  default  myBundle.min.js             emitted
  1 kB  default  myBundle.min.js.map         emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript 2`] = `
"!function(t,e){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=e();else if(\\"function\\"==typeof define&&define.amd)define([],e);else{var n=e();for(var o in n)(\\"object\\"==typeof exports?exports:t)[o]=n[o]}}(window,function(){return function(t){var e={};function n(o){if(e[o])return e[o].exports;var r=e[o]={i:o,l:!1,exports:{}};return t[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=t,n.c=e,n.d=function(t,e,o){n.o(t,e)||Object.defineProperty(t,e,{configurable:!1,enumerable:!0,get:o})},n.r=function(t){Object.defineProperty(t,\\"__esModule\\",{value:!0})},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=1)}([function(t,e,n){\\"use strict\\";function o(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function r(t,e){for(var n=0;n<e.length;n++){var o=e[n];o.enumerable=o.enumerable||!1,o.configurable=!0,\\"value\\"in o&&(o.writable=!0),Object.defineProperty(t,o.key,o)}}function u(t,e,n){return e&&r(t.prototype,e),n&&r(t,n),t}function i(t,e){return(i=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t})(t,e)}function c(t){return(c=\\"function\\"==typeof Symbol&&\\"symbol\\"==typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t})(t)}function f(t){return(f=\\"function\\"==typeof Symbol&&\\"symbol\\"===c(Symbol.iterator)?function(t){return c(t)}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":c(t)})(t)}function l(t,e){return!e||\\"object\\"!==f(e)&&\\"function\\"!=typeof e?function(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}(t):e}function a(t){return(a=Object.getPrototypeOf||function(t){return t.__proto__})(t)}n.r(e);var p=function(t){function e(){var t,n,r;o(this,e);for(var u=arguments.length,i=new Array(u),c=0;c<u;c++)i[c]=arguments[c];return l(r,(n=r=l(this,(t=a(e)).call.apply(t,[this].concat(i))),r.handleClick=function(){r.setState({hey:!0})},n))}return u(e,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),function(t,e){if(\\"function\\"!=typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");i(t.prototype,e&&e.prototype),e&&i(t,e)}(e,t),e}(React.Component);n.d(e,\\"default\\",function(){return s});var s=function(){function t(){o(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(p)}}]),t}()},function(t,e,n){t.exports=n(0)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles JavaScript with externals 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/externals/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                              status
  1 kB  0        external \\"somelibrary/thing/stuff\\"  built
  1 kB  1        ./js/script.js + 9 modules          built
  1 kB  2        multi ./js/script.js                built

  size  name     asset                               status
  1 kB  default  myBundle.min.js                     emitted
  1 kB  default  myBundle.min.js.map                 emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript with externals 2`] = `
"!function(t,e){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=e(require(\\"somelibrary/thing/stuff\\"));else if(\\"function\\"==typeof define&&define.amd)define([\\"somelibrary/thing/stuff\\"],e);else{var n=\\"object\\"==typeof exports?e(require(\\"somelibrary/thing/stuff\\")):e(t[\\"somelibrary/thing/stuff\\"]);for(var o in n)(\\"object\\"==typeof exports?exports:t)[o]=n[o]}}(window,function(t){return function(t){var e={};function n(o){if(e[o])return e[o].exports;var r=e[o]={i:o,l:!1,exports:{}};return t[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=t,n.c=e,n.d=function(t,e,o){n.o(t,e)||Object.defineProperty(t,e,{configurable:!1,enumerable:!0,get:o})},n.r=function(t){Object.defineProperty(t,\\"__esModule\\",{value:!0})},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=2)}([function(e,n){e.exports=t},function(t,e,n){\\"use strict\\";function o(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function r(t,e){for(var n=0;n<e.length;n++){var o=e[n];o.enumerable=o.enumerable||!1,o.configurable=!0,\\"value\\"in o&&(o.writable=!0),Object.defineProperty(t,o.key,o)}}function u(t,e,n){return e&&r(t.prototype,e),n&&r(t,n),t}n.r(e);var i=n(0),f=n.n(i);function c(t,e){return(c=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t})(t,e)}function l(t){return(l=\\"function\\"==typeof Symbol&&\\"symbol\\"==typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t})(t)}function a(t){return(a=\\"function\\"==typeof Symbol&&\\"symbol\\"===l(Symbol.iterator)?function(t){return l(t)}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":l(t)})(t)}function s(t,e){return!e||\\"object\\"!==a(e)&&\\"function\\"!=typeof e?function(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}(t):e}function p(t){return(p=Object.getPrototypeOf||function(t){return t.__proto__})(t)}var y=function(t){function e(){var t,n,r;o(this,e);for(var u=arguments.length,i=new Array(u),f=0;f<u;f++)i[f]=arguments[f];return s(r,(n=r=s(this,(t=p(e)).call.apply(t,[this].concat(i))),r.handleClick=function(){r.setState({hey:!0})},n))}return u(e,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),function(t,e){if(\\"function\\"!=typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");c(t.prototype,e&&e.prototype),e&&c(t,e)}(e,t),e}(React.Component);n.d(e,\\"default\\",function(){return b});var b=function(){function t(){o(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(y,f.a)}}]),t}()},function(t,e,n){t.exports=n(1)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Deduplicates helpers 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles-deduplicates/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                       status
  1 kB  0        ./js/script.js + 10 modules  built
  1 kB  1        multi ./js/script.js         built

  size  name     asset                        status
  1 kB  default  myBundle.min.js              emitted
  1 kB  default  myBundle.min.js.map          emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Deduplicates helpers 2`] = `
"!function(t,e){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=e();else if(\\"function\\"==typeof define&&define.amd)define([],e);else{var n=e();for(var o in n)(\\"object\\"==typeof exports?exports:t)[o]=n[o]}}(window,function(){return function(t){var e={};function n(o){if(e[o])return e[o].exports;var r=e[o]={i:o,l:!1,exports:{}};return t[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=t,n.c=e,n.d=function(t,e,o){n.o(t,e)||Object.defineProperty(t,e,{configurable:!1,enumerable:!0,get:o})},n.r=function(t){Object.defineProperty(t,\\"__esModule\\",{value:!0})},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=1)}([function(t,e,n){\\"use strict\\";function o(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function r(t,e){for(var n=0;n<e.length;n++){var o=e[n];o.enumerable=o.enumerable||!1,o.configurable=!0,\\"value\\"in o&&(o.writable=!0),Object.defineProperty(t,o.key,o)}}function u(t,e,n){return e&&r(t.prototype,e),n&&r(t,n),t}function i(t,e){return(i=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t})(t,e)}function c(t,e){if(\\"function\\"!=typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");i(t.prototype,e&&e.prototype),e&&i(t,e)}function f(t){return(f=\\"function\\"==typeof Symbol&&\\"symbol\\"==typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t})(t)}function l(t){return(l=\\"function\\"==typeof Symbol&&\\"symbol\\"===f(Symbol.iterator)?function(t){return f(t)}:function(t){return t&&\\"function\\"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":f(t)})(t)}function a(t,e){return!e||\\"object\\"!==l(e)&&\\"function\\"!=typeof e?function(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}(t):e}function s(t){return(s=Object.getPrototypeOf||function(t){return t.__proto__})(t)}n.r(e);var p=function(t){function e(){var t,n,r;o(this,e);for(var u=arguments.length,i=new Array(u),c=0;c<u;c++)i[c]=arguments[c];return a(r,(n=r=a(this,(t=s(e)).call.apply(t,[this].concat(i))),r.handleClick=function(){r.setState({hey:!0})},n))}return u(e,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),c(e,t),e}(React.Component),y=function(t){function e(){var t,n,r;o(this,e);for(var u=arguments.length,i=new Array(u),c=0;c<u;c++)i[c]=arguments[c];return a(r,(n=r=a(this,(t=s(e)).call.apply(t,[this].concat(i))),r.handleClick=function(){r.setState({hey:!0})},n))}return u(e,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),c(e,t),e}(React.Component);n.d(e,\\"default\\",function(){return b});var b=function(){function t(){o(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(p,y)}}]),t}()},function(t,e,n){t.exports=n(0)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Does not transpile on modern browsers 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/no-old-browser/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                      status
  1 kB  0        ./js/script.js + 1 modules  built
  1 kB  1        multi ./js/script.js        built

  size  name     asset                       status
  1 kB  default  myBundle.min.js             emitted
  1 kB  default  myBundle.min.js.map         emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Does not transpile on modern browsers 2`] = `
"!function(e,t){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=t();else if(\\"function\\"==typeof define&&define.amd)define([],t);else{var n=t();for(var o in n)(\\"object\\"==typeof exports?exports:e)[o]=n[o]}}(window,function(){return function(e){var t={};function n(o){if(t[o])return t[o].exports;var r=t[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=e,n.c=t,n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.r=function(e){Object.defineProperty(e,\\"__esModule\\",{value:!0})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p=\\"\\",n(n.s=1)}([function(e,t,n){\\"use strict\\";n.r(t);class o extends React.Component{constructor(...e){var t;return t=super(...e),this.handleClick=(()=>{this.setState({hey:!0})}),t}render(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}n.d(t,\\"default\\",function(){return r});class r{constructor(){console.log(\\"init class\\")}method(){console.log(o)}}},function(e,t,n){e.exports=n(0)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myBundle] (!) Errors were found
js/script.js
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Errors were found
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/js/script.js
  15:1  error  Parsing error: Unexpected token

  13 |
  14 | }
> 15 |
     | ^

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints JavaScript with webpack 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Webpack compilation failed
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                      status
  1 kB  0     ./js/script.js + 9 modules  built ✖
  1 kB  1     multi ./js/script.js        built

  (2 assets hidden)

  Failed to compile.

./js/Component.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/Component.js
  11:3   error  Opening curly brace does not appear on the same line as controlling statement  brace-style
  12:13  error  Multiple spaces found before '<'                                               no-multi-spaces

✖ 2 problems (2 errors, 0 warnings)
  2 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ ./js/script.js 5:0-39 23:33-42
 @ multi ./js/script.js

./js/script.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/script.js
   3:24  error    Multiple spaces found before '\\"./Component.js\\"'                                no-multi-spaces
   5:10  error    'test' is defined but never used                                               no-unused-vars
   5:19  error    A space is required after ','                                                  comma-spacing
   6:1   error    Expected indentation of 2 spaces but found 3                                   indent
  11:5   warning  Unexpected console statement                                                   no-console
  15:5   warning  Unexpected console statement                                                   no-console
  15:19  error    Multiple spaces found before '\\"some method\\"'                                   no-multi-spaces
  15:33  error    A space is required after ','                                                  comma-spacing
  15:33  error    There should be no space before ','                                            comma-spacing
  19:3   error    Opening curly brace does not appear on the same line as controlling statement  brace-style
  20:14  error    Expected '===' and instead saw '=='                                            eqeqeq

✖ 11 problems (9 errors, 2 warnings)
  7 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ multi ./js/script.js

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                     status
  1 kB  0        ./js/index.js + 2 modules  built
  1 kB  1        multi ./js/index.js        built

  size  name     asset                      status
  1 kB  default  myBundle.min.js            emitted
  1 kB  default  myBundle.min.js.map        emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
